import React from 'react';
import renderer from 'react-test-renderer';
import { cleanup, fireEvent, render } from '@testing-library/react';
import '@testing-library/jest-dom';
import { expectFnCalled } from '@test/utils';

import { EditorTree, IOpenEditProps } from '../explore/editorTree';
import {
    editorTreeActiveItemClassName,
    editorTreeGroupClassName,
} from '../explore/base';
import {
    EXPLORER_TOGGLE_CLOSE_GROUP_EDITORS,
    EXPLORER_TOGGLE_SAVE_GROUP,
} from 'mo/model';

const PaneEditorTree = (props: Omit<IOpenEditProps, 'panel'>) => {
    return <EditorTree panel={{ id: 'test', name: 'test' }} {...props} />;
};

const mockGroups = [
    {
        id: 1,
        tab: {
            id: 'tab1',
            name: 'tab1',
        },
        data: [
            {
                id: 'tab1',
                name: 'tab1',
                data: {
                    path: 'tab',
                },
            },
            {
                id: 'tab2',
                name: 'tab2',
                data: {
                    path: 'tab',
                },
            },
        ],
    },
];

// mock Scrollable component
jest.mock('mo/components/scrollable', () => {
    const originalModule = jest.requireActual('mo/components/scrollable');
    return {
        ...originalModule,
        Scrollable: ({ children }) => {
            return <>{children}</>;
        },
    };
});

// mock Toolbar component
jest.mock('mo/components/toolbar', () => {
    const originalModule = jest.requireActual('mo/components/toolbar');
    return {
        ...originalModule,
        Toolbar: ({ onClick, data = [] }) => (
            <div data-testid="toolbar">
                {data.map((item, index) => (
                    <span key={index} onClick={(e) => onClick(e, item)}>
                        toolbar-{index}
                    </span>
                ))}
            </div>
        ),
    };
});

// to mock useRef
jest.mock('react', () => {
    const originReact = jest.requireActual('react');
    return {
        ...originReact,
        useRef: jest.fn(() => ({
            current: null,
        })),
    };
});

describe('The EditorTree Component', () => {
    afterEach(cleanup);

    test('Match Snapshot', () => {
        const component = renderer.create(
            <PaneEditorTree groups={mockGroups} />
        );
        expect(component.toJSON()).toMatchSnapshot();
    });

    test('Should get null without groups', () => {
        const { container } = render(<PaneEditorTree />);
        expect(container.innerHTML).toBe('');
    });

    test('Should support to active the pane', () => {
        const { getByTitle } = render(
            <PaneEditorTree groups={mockGroups} current={mockGroups[0]} />
        );

        const tab1 = getByTitle('tab/tab1');
        expect(tab1.classList).toContain(editorTreeActiveItemClassName);
    });

    test('Should support to close tab', () => {
        expectFnCalled((testFn) => {
            const { getByTitle } = render(
                <PaneEditorTree
                    groups={mockGroups}
                    onClose={testFn}
                    current={mockGroups[0]}
                />
            );

            const tab1 = getByTitle('tab/tab1');
            fireEvent.click(tab1.querySelector('span.codicon-close')!);

            expect(testFn.mock.calls[0][0]).toBe('tab1');
            expect(testFn.mock.calls[0][1]).toBe(1);
        });
    });

    test('Should support to contextMenu event', () => {
        const contextMenu = {
            id: 'test',
            name: 'menu',
        };
        expectFnCalled((contextMenuFn) => {
            const { getByTitle, getByRole } = render(
                <PaneEditorTree
                    groups={mockGroups}
                    current={mockGroups[0]}
                    contextMenu={[contextMenu]}
                    onContextMenu={contextMenuFn}
                />
            );

            const tab1 = getByTitle('tab/tab1');
            fireEvent.contextMenu(tab1);

            const menu = getByRole('menu');
            expect(menu).toBeInTheDocument();

            fireEvent.click(menu.firstElementChild!);

            expect(contextMenuFn.mock.calls[0][0]).toEqual(
                expect.objectContaining(contextMenu)
            );
            expect(contextMenuFn.mock.calls[0][1]).toEqual(1);
            expect(contextMenuFn.mock.calls[0][2]).toEqual({
                id: 'tab1',
                name: 'tab1',
                data: {
                    path: 'tab',
                },
            });
        });
    });

    test('Should support to select tab', () => {
        expectFnCalled((selectFn) => {
            const { getByTitle } = render(
                <PaneEditorTree
                    groups={mockGroups}
                    current={mockGroups[0]}
                    onSelect={selectFn}
                />
            );

            const tab1 = getByTitle('tab/tab1');
            fireEvent.click(tab1);
            // same current tab won't triiger onSelect event
            expect(selectFn).not.toBeCalled();

            const tab2 = getByTitle('tab/tab2');
            fireEvent.click(tab2);
        });
    });

    test('Should not to scroll into view when scollerHeight is invalid', () => {
        const mockScroll = jest.fn();
        (React.useRef as jest.Mock).mockImplementation(() => ({
            current: { scrollHeight: 100, scrollTo: mockScroll },
        }));

        const current = mockGroups[0];

        render(<PaneEditorTree groups={mockGroups} current={current} />);
        expect(mockScroll).not.toBeCalled();
    });

    test('Should scroll into view when add an active tab', () => {
        const mockScroll = jest.fn();
        (React.useRef as jest.Mock).mockImplementation(() => ({
            current: { scrollHeight: 200, scrollTo: mockScroll },
        }));

        const current = mockGroups[0];

        render(<PaneEditorTree groups={mockGroups} current={current} />);
        expect(mockScroll).toBeCalled();
    });
});

const multipleGroups = [
    {
        id: 1,
        tab: {
            id: 'tab1',
            name: 'tab1',
        },
        data: [
            {
                id: 'tab1',
                name: 'tab1',
                data: {
                    path: 'tab',
                },
            },
            {
                id: 'tab2',
                name: 'tab2',
                data: {
                    path: 'tab',
                },
            },
        ],
    },
    {
        id: 2,
        tab: {
            id: 'tab1',
            name: 'tab1',
        },
        data: [
            {
                id: 'tab1',
                name: 'tab1',
                data: {
                    path: 'tab',
                },
            },
            {
                id: 'tab2',
                name: 'tab2',
                data: {
                    path: 'tab',
                },
            },
        ],
    },
];

describe('The EditorTree Component With multiple groups', () => {
    afterEach(cleanup);

    test('Match Snapshot', () => {
        const component = renderer.create(
            <PaneEditorTree groups={multipleGroups} />
        );
        expect(component.toJSON()).toMatchSnapshot();
    });

    test('Should focus the first child in group when click group title', () => {
        expectFnCalled((selectFn) => {
            const { container } = render(
                <PaneEditorTree
                    groups={multipleGroups}
                    current={multipleGroups[0]}
                    onSelect={selectFn}
                />
            );

            const groups = container.querySelectorAll(
                `.${editorTreeGroupClassName}`
            );

            expect(groups).toHaveLength(2);

            const group1 = groups[0];
            fireEvent.click(group1);

            expect(
                (group1.nextElementSibling! as HTMLDivElement).focus
            ).toBeTruthy();

            expect(selectFn.mock.calls[0][0]).toBe('tab1');
            expect(selectFn.mock.calls[0][1]).toBe(1);
        });
    });

    test('Should support trigger contextMenu event in group title', () => {
        const contextMenu = {
            id: 'test',
            name: 'menu',
        };
        expectFnCalled((contextMenuFn) => {
            const { container, getByRole } = render(
                <PaneEditorTree
                    groups={multipleGroups}
                    current={multipleGroups[0]}
                    headerContextMenu={[contextMenu]}
                    onContextMenu={contextMenuFn}
                />
            );

            const group1 = container.querySelector(
                `.${editorTreeGroupClassName}`
            );

            fireEvent.contextMenu(group1!);

            const menu = getByRole('menu');
            expect(menu).toBeInTheDocument();

            fireEvent.click(menu.firstElementChild!);

            expect(contextMenuFn.mock.calls[0][0]).toEqual(
                expect.objectContaining(contextMenu)
            );
            expect(contextMenuFn.mock.calls[0][1]).toEqual(1);
            expect(contextMenuFn.mock.calls[0][2]).toBeUndefined();
        });
    });

    test('Should have a toolbar in group title', () => {
        const closeMockFn = jest.fn();
        const saveMockFn = jest.fn();
        const toolbarMockFn = jest.fn();

        const { getAllByTestId } = render(
            <PaneEditorTree
                groups={multipleGroups}
                current={multipleGroups[0]}
                groupToolbar={[
                    {
                        id: EXPLORER_TOGGLE_SAVE_GROUP,
                        title: 'Save Group',
                        icon: 'save-all',
                    },
                    {
                        id: EXPLORER_TOGGLE_CLOSE_GROUP_EDITORS,
                        title: 'Close Group Editors',
                        icon: 'close-all',
                    },
                    {
                        id: 'test',
                        title: 'testing',
                    },
                ]}
                onCloseGroup={closeMockFn}
                onSaveGroup={saveMockFn}
                onToolbarClick={toolbarMockFn}
            />
        );

        const toolbars = getAllByTestId('toolbar');

        expect(toolbars).toHaveLength(multipleGroups.length);

        const index = 0;
        let triggerBtn = toolbars[index].firstElementChild!;

        fireEvent.click(triggerBtn);

        // first button is for saving
        expect(saveMockFn).toBeCalled();
        expect(saveMockFn.mock.calls[0][0]).toBe(multipleGroups[index].id);

        triggerBtn = triggerBtn.nextElementSibling!;
        fireEvent.click(triggerBtn);

        // next button is for closing
        expect(closeMockFn).toBeCalled();
        expect(closeMockFn.mock.calls[0][0]).toBe(multipleGroups[index].id);

        triggerBtn = triggerBtn.nextElementSibling!;
        fireEvent.click(triggerBtn);

        // last button is extra button
        expect(toolbarMockFn).toBeCalled();
        expect(toolbarMockFn.mock.calls[0][0]).toEqual({
            id: 'test',
            title: 'testing',
        });
        expect(toolbarMockFn.mock.calls[0][1]).toBe(multipleGroups[index].id);
    });
});
